# ctri

./: .gitignore  CMakeLists.txt  README
src/: main.cpp
